Viewport width problem fix
- More styling adjustments, should fix the problems where part of the input fields were cut off, especially in iPhone SE view.
- Minor issue with desktop view of the BCE entered values view not being perfectly aligned, but works on mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,6 +6,7 @@
 
 body {
   font-family: Arial, sans-serif;
+  height: 100%;
 }
 
 .App {
