--- a/frontend/src/styles/CTRHandWritingRecognitionStyles.css
+++ b/frontend/src/styles/CTRHandWritingRecognitionStyles.css
@@ -1,23 +1,56 @@
-input[type="number"] {
-    width:150px;
-    max-width:80%;
+input[type="number"], input[type="text"] {
+    width: 150px;
+    max-width: 80%;
     padding: 0.75em;
     border-radius: 0.25em;
 }
 /* Makes sure the inputs are aligned */
-div.input-group {
+div.input-group, p {
     display: flex;
     margin: auto;
     justify-content: space-between;
+    align-self: center;
+    /* border: solid 2px red; */
+}
+div.container, 
+div.bce-container {
+    display: flex;
+    margin: 0 10%;
+    /* min-width: fit-content; */
+    max-width: 100%;
+    min-height: fit-content;
+    /* justify-content: space-between; */
+    justify-items: center;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 7%;
 }
 div.container {
-    display: flex;
-    margin-top: 15%;
-    margin-bottom: 10%;
+    /* border: 2px solid purple; */
+    height: 100vh;
+}
+div.bce-container {
+    /* border: 2px solid cornflowerblue; */
+    height: 100vh;
+}
+/* Just the ending results page */
+.bce-result {
+    border: solid 1px black;
+    background-color: lightgrey;
+    padding: 2%;
+    border-radius: 0.10em;
+    min-width: fit-content;
     max-width: 100%;
+    min-height: fit-content;
+
+    justify-items: center;
+    align-self: center;
+    flex-direction: column;
+    margin: auto;
 }
 
-label.data-label {
+label, 
+.data-label {
     font-size: 14px;
     font-weight: bold;
     text-align: left;
@@ -39,8 +72,11 @@ label.data-label {
     cursor: pointer;
     transition: background-color 0.3s ease;
     margin: auto;
+    align-self: center;
+    justify-self: center;
 }
-/* TODO:
- * Larger font size options?
- * Different colors available for color blindness
-*/
+/* overflow problems for iPhone SE specifically, cuts off tops*/
+/* fixed but is quite chunky
+ * sometimes fucks with the uploading photo section
+ * BCE Results needs more space between little boxes
+ */
